# crowdsky_app

./: .gitignore  CLAUDE.md  CrowdSky.spec  Hunt+24_ReadMe.txt  README.md  __main__.py  app_state.py  buildozer.spec  crowdsky.kv  hunt24_shortlist.csv  main.py  pyproject.toml  readme-dev.md
.claude/background_data/: hunt24_shortlist.csv
.github/workflows/: build-desktop.yml
hooks/: hook-astropy.py
plans/: app-version-3-plans.md  plan-0-login.md  plan-1-home.md  plan-2-skymap.md  plan-3-gallery.md  plan-4-donate-seestar.md  plan-5-donate-harddrive.md  plan-6-status.md  plan-overview.md
screens/: donate_harddrive_screen.py  donate_seestar_screen.py  gallery_screen.py  home_screen.py  login_screen.py  plan_result_screen.py  plan_screen.py  skymap_screen.py  status_screen.py
scripts/: build_hunt_shortlist.py
services/: credential_store.py  crowdsky_client.py  file_transfer.py  harddrive_crawler.py  job_broker.py  local_stacker.py  night_window.py  plan_builder.py  plan_executor.py  prefs_store.py  seestar_service.py  stack_cache.py  target_catalogue.py  target_scanner.py  target_source.py  upload_journal.py
widgets/: album_row.py  donate_harddrive_card.py  donate_seestar_card.py  filter_bar.py  gallery_card.py  horizon_compass.py  job_list_item.py  pagination_bar.py  plan_skymap.py  sky_map.py  thumbnail_popup.py  timeline.py
